# senpaisearch_api

./: Dockerfile  arvore_senpai.txt  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 0e6b039fec49_create_characters_table.py  5e0657801e32_adicionado_novo_campo_a_tabela_users.py  6a1d4156e88f_create_users_table.py  7f773f90300a_add_role_column_to_users.py  e1369c72ce8d_adiciona_coluna_is_superuser_ao_modelo_.py
senpaisearch/: app.py  database.py  models.py  schemas.py  security.py
senpaisearch/routers/: auth.py  characters.py  users.py
senpaisearch/templates/: base.html  index.html  login.html  signup.html
tests/: conftest.py  test_app.py  test_auth.py  test_character.py  test_db.py  test_security.py  test_users.py
