[tool.poetry]
name = "senpaisearch"
version = "0.1.0"
description = "API para buscar personagens de anime"
authors = ["bogeabr <bogea.matheus76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.9.2"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
pre_test = 'task lint'
format = 'ruff check . --fix && ruff format .'
test = 'pytest --cov=senpaisearch -vv'
post_test = 'coverage html'
run = 'fastapi dev senpaisearch/app.py'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
